aug 6th, 06:
	-change: The terrain is compiled into display list


jun 25th, 06:
	-new: GL_ALPHA_TEST with 0.2 as value for GL_GEATER function
	-new: Server sends ACK or NCK on client connection


jun 20th, 06:
	-new: The ModelLoader and Model classes now handle translucent objects correctly


jun 18th, 06:
	-new: The vehicle models are now rotated and translated correctly


jun 10th, 06:
	-fix: Undefined OPENCITY_DEBUG in NDEBUG mode
	-chg: Source tree has been moved to SVN




jan 24th, 06: ======>  OpenCity 0.0.3 stable released  <=====
	-fix: near plan in the orthogonal mode


dec 11th, 05
	-new: BinReloc from AutoPackage has been imported
	-new: audiomanager.*: can automatically add the prefix to the filename while loading
	-remove: HomeDir variable from opencity.conf
	-change: buildinglayer.cpp: now the player can build over existing roads or electric lines
	-change: main.cpp: now use BinReloc routines to find the prefix if they're available
	-change: city.cpp: hospital icon in tool-circle has been disabled


nov 12th, 05:
	-new: internal OpenGL font system
	-remove: SDL_ttf
	-change: SDL_OPENGLBLIT has been changed to SDL_OPENGL


nov 7th, 05:
	-change: Micro simulator's codes have been improved
	-fix: DestroyStructure() now handles big RCI structures


nov 2nd, 05:
	-change: Build over existing RCI zones
	-change: OC now uses GL_SELECT mode for selection
	-new: 16bpp mode support


oct 28th, 05:
	-change: When LMB is pressed and the mouse is over a "guimain" object. The object is
considered as "cliked" and "mouseover"


oct 27th, 05:
	-change: graphic and structure code correspondence is moved to "propertymanager"
	-remove: "layer" and "persistence" interface prefixes
	-new: show WEG building preview


oct 25th, 05:
	-change: clean up renderer's OpenGL code for better performance


oct 14th, 05:
	-new: the RCI building placement algorithm has been improved


oct 11th, 05:
	-change: layerDestroyStructure() now works on the whole specified surface