@@ -37,6 +37,7 @@ Tell us save/load bug
 ==============================================================================
 OpenCity TODO version 0.0.5 BETA
 ----------------------------------
+Global city dimensions
 Water structures: pipe, pump, tower models
 Water micro simulator
 Tree micro simulator
